# discord-turntable

./: .gitignore  stack.yaml  turntable.cabal
src/: Bot.hs  Chat.hs  Main.hs  Rest.hs  Types.hs
src/Network/Discord/: Types.hs
src/Network/Discord/Types/: Prelude.hs
